@@ -1,0 +1,11 @@
+<strong>Hoi {{user.first_name}}!</strong><br>
+<br>
+Er is een nieuwe reactie op een formulier dat je volgt. 
+<br>
+<a href='svia.nl/forms/view/{{form_id}}'>Bekijk het formulier hier</a><br>
+<br>
+Groetjes,<br>
+<strong>via</strong><br>
+<br>
+<small>This email was sent by a user triggered event and thus can't really be unsubscribed from.<br>
+If you keep getting these messages and don't want to, please unsubscribe from this form.</small>
