@@ -1,5 +1,6 @@
 XX-XX-XXXX v2.x.x.0:
 * Fixed bug where people on the reservelist were able to pay for events
+* Followers of forms automatically recieve an e-mail when there is a new response to the form
 
 07-07-2016 v2.6.8.0:
 * Added facebook link in base.htm
